# data-import-pdf

./: .env.dist  Cargo.toml  Makefile  README.md  docker-compose.yml  mysql.cnf
migrations/2023-01-02-191638_create_status/: up.sql
migrations/2023-01-14-103706_create_categories/: up.sql
migrations/2023-01-14-114833_create_countries/: up.sql
migrations/2023-01-14-143903_create_subcategories/: down.sql  up.sql
migrations/2023-01-14-151332_create_sagas/: down.sql  up.sql
migrations/2023-01-14-162852_create_sagas_subcategories/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs  test.rs
src/data/: category.rs  country.rs  mod.rs  saga.rs  saga_style.rs  sagas_subcategories.rs  status.rs  sub_categories.rs
