[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf-extract = "0.6.4"
lopdf = { version = "0.26", default-features = false, features = [ "pom_parser" ] }
regex = "1.7.0"
diesel = { version = "2.0.0", features = ["mysql", "chrono"] }
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.3", features = ["serde"] }